Fix broken layout by changing profile panel from visibility: hidden to display: none.

--- a/src/app/stylesheets/meta-detail.component.css
+++ b/src/app/stylesheets/meta-detail.component.css
@@ -1,4 +1,3 @@
-
 .detail {
   position: relative;
   display: flex;
@@ -22,9 +21,6 @@
 }
 
 #info {
-  border-radius: 6px;
-  width: 500px;
-  height: 100px;
   text-align: center;
   margin: 0 auto;
   font-size: 2.6rem;
@@ -33,7 +29,7 @@
 #name, #alias {
   position: relative;
   max-width: 475px;
-  line-height: 2rem;
+  top: 20px;
   margin: 0 auto;
 }
 
